# analista-di-bilancio

./: .gitignore  CLAUDE.md  README.md  eval_enervit.py  main.py  prototipo_estrazione.py  pyproject.toml
agents/: __init__.py  analista.py  base.py  estrattore_numerico.py  estrattore_pdf.py  estrattore_pdf_docling.py  estrattore_qualitativo.py  estrattore_semantico.py  orchestratore_multi.py  pipeline.py  produttore.py
skills/: skill_analisi.md  skill_checker.md  skill_estrazione_numerica.md  skill_estrazione_pdf.md  skill_estrazione_qualitativa.md  skill_orchestratore.md  skill_produzione.md  skill_riclassifica.md  skill_valutazione_qualita.md
tests/: conftest.py  test_agent_loop.py  test_analista.py  test_calcolatori.py  test_docling_parser.py  test_document_recon.py  test_estrattore_numerico.py  test_estrattore_numerico_bundle.py  test_estrattore_pdf.py  test_estrattore_pdf_docling.py  test_evidence_schema.py  test_multi_anno.py  test_pdf_parser.py  test_pipeline.py  test_pipeline_evidenze.py  test_produttore.py  test_quality_scorer.py  test_reconciliation.py  test_semantic_parser.py  test_validatori.py  test_validatori_nuovi.py
tests/fixtures/: risposta_llm_estrazione.json  risposta_llm_riclassifica.json
tools/: __init__.py  calcolatori.py  docling_parser.py  document_recon.py  evidence_schema.py  pdf_parser.py  quality_scorer.py  reconciliation.py  schema.py  semantic_parser.py  validatori.py  valutatore_qualita.py  writer.py
